SERVER-12041 improve retry logic for read preferences without slaveOk set